# rstmgmt

./: .gitignore  Cargo.toml  flake.nix
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  tokens.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230429_214129_users.rs  m20230429_214317_tokens.rs
src/: authentication.rs  database.rs  lib.rs  main.rs
