[package]
name = "rstmgmt"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
argon2 = "0.5.0"
rand_core = {version = "0.6.4", features = ["getrandom"]}
sea-orm = { version = "0.11.3", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-uuid", "with-time" ] }
futures = "0.3"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"]}
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
uuid = {version = "1.3.2", features = ["v4"]}
time = {version = "0.3.21", features = ["local-offset", "macros", "parsing", "large-dates", "formatting"]}
totp-rs = {version = "^5.0", features = ["gen_secret", "qr"]}

[profile.release]
strip = true
lto = true
incremental = true
overflow-checks = true

[profile.dev]
opt-level = 0
incremental = true